# MaterialDB

./: .gitignore  Init.py  InitGui.py  MaterialDBGui.py  README.md  TestMaterialDBApp.py  package.xml
API/: RemoteMaterials.py
MaterialDB/: CmdTest.py  Configuration.py  Database.py  DatabaseSQLite.py
MaterialDB/Database/: Database.py  DatabaseMySQL.py  DatabaseMySQLCreate.py  DatabaseMySQLTest.py  DatabaseSQLite.py  Exceptions.py
MaterialDB/Tests/MySQL/: TestMySQL.py
MaterialDB/Tests/SQLite/: TestSQLite.py
MaterialDB/UI/Commands/: CmdCreate.py  CmdManageUsers.py  CmdMigrate.py  CmdTest.py
MaterialDB/UI/Settings/: DlgSettingsDatabase.py
MaterialDB/UI/Tasks/: TaskCreateDatabase.py
MaterialDB/interface/: MaterialDBInterface.py
MaterialDB/manager/: MaterialDBManager.py
MaterialDB/util/: UIPath.py
Resources/db/: Materials-test.db  create_tables.sql
Resources/ui/: DlgCreateDatabase.ui  DlgSettingsDatabase.ui
